showアクションルーティング記述・indexビューファイル　パス記述　修正

--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -131,7 +131,7 @@
 
       <li class='list'>
         <% @items.each do |item| %>
-        <%= link_to "#" do %>
+        <%= link_to item_path(item.id) do %>
         <div class='item-img-content'>
           <%= image_tag(item.image, class: "item-img") %>
 
@@ -157,8 +157,9 @@
           </div>
         </div>
         <% end %>
-        <% end %>
+
       </li>
+      <% end %>
 
 
 
@@ -178,10 +179,10 @@
             </div>
           </div>
         </div>
-        <% end %>
+
         <% end %>
       </li>
-
+      <% end %>
 
     </ul>
   </div>
